--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,2 @@
-dj-database-url==0.4.2
-Django==1.11.7
-gunicorn==19.7.1
-psycopg2==2.7.3.2
-pytz==2017.3
-whitenoise==3.3.1
+# Load prod on reqs on Heroku; manually install dev reqs.
+-r py-requirements/prod.txt
